--- a/acceso.html
+++ b/acceso.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
+  <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
 <!--  Last Published: Wed Apr 06 2022 21:26:29 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="624c7b1c97bc8881f0f93846" data-wf-site="624c7b1c97bc88d893f93815">
 <head>
@@ -15,7 +15,7 @@
   <script type="text/javascript">WebFont.load({  google: {    families: ["Varela:400","Lato:100,100italic,300,300italic,400,400italic,700,700italic,900,900italic"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
+  <link href="images/logo-favicon.svg" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
 <body>
@@ -27,9 +27,10 @@
         <a href="compra-bitcoin.html" class="nav-bar-custom w-nav-link">Compra Cryptomonedas</a>
         <a href="sucursales.html" class="nav-bar-custom w-nav-link">Sucursales</a>
         <a href="bitcoin-otc.html" class="nav-bar-custom w-nav-link">Bitcoin Atención Directa</a>
+        <a href="servicios.html" class="nav-bar-custom w-nav-link">servicios</a>
         <a href="eventos.html" class="nav-bar-custom w-nav-link">Eventos</a>
         <a href="programa-de-socios.html" class="nav-bar-custom w-nav-link">Programa De Socios</a>
-        <a href="nft-do-over.html" class="nav-bar-custom w-nav-link">NFT</a>
+         <!--  <a href="nft-do-over.html" class="nav-bar-custom w-nav-link">NFT</a> --> 
         <a href="centro-de-recursos.html" class="nav-bar-custom w-nav-link">Centro De Recursos</a>
         
         <a href="https://www.cryptospace.com/buy-crypto.html" class="open-account-button-top w-button">Comprar con tarjeta de crédito</a>
@@ -54,9 +55,9 @@
           <p class="paragraph-column">Estamos en las etapas finales del lanzamiento del nuevo intercambio en línea de Cryptomex. Vea abajo.<br></p>
           <p>El acceso anticipado se anunciará en las próximas semanas.<br><br>Regístrese para recibir actualizaciones, incluida la verificación prioritaria de la cuenta tan pronto como lancemos.<br></p>
           <ul role="list" class="list-6">
-            <li>Cuenta Cryptomex para comprar y vender criptomonedas<br></li>
+            <li>Cuenta Cryptomex para comprar y vender cryptomonedas<br></li>
             <li>Acceso a nuestra red de cajeros automáticos Bitcoin y mostrador OTC<br></li>
-            <li>Invitaciones a eventos en línea con educación criptográfica de vanguardia<br></li>
+            <li>Invitaciones a eventos en línea con educación cryptográfica de vanguardia<br></li>
           </ul>
         </div>
         <div class="w-col w-col-6">
