--- a/atencion-al-cliente.html
+++ b/atencion-al-cliente.html
@@ -15,7 +15,7 @@
   <script type="text/javascript">WebFont.load({  google: {    families: ["Varela:400","Lato:100,100italic,300,300italic,400,400italic,700,700italic,900,900italic"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
+  <link href="images/logo-favicon.svg" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
 <body class="body">
@@ -26,9 +26,10 @@
         <a href="index.html" class="nav-bar-custom w-nav-link">Inicio</a>
         <a href="compra-bitcoin.html" class="nav-bar-custom w-nav-link">Compra Bitcoin</a>
         <a href="bitcoin-otc.html" class="nav-bar-custom w-nav-link">Bitcoin Atención directa</a>
+        <a href="./servicios.html" class="nav-bar-custom w-nav-link">servicios</a>
         <a href="eventos.html" class="nav-bar-custom w-nav-link">Eventos</a>
         <a href="programa-de-socios.html" class="nav-bar-custom w-nav-link">Programa De Socios</a>
-        <a href="nft-do-over.html" class="nav-bar-custom w-nav-link">NFT</a>
+         <!-- <a href="nft-do-over.html" class="nav-bar-custom w-nav-link">NFT</a> --> 
         <a href="centro-de-recursos.html" class="nav-bar-custom w-nav-link">Centro De Recursos</a>
         <a href="https://www.cryptospace.com/buy-crypto.html" class="open-account-button-top w-button">Comprar con tarjeta de crédito</a>
         <a href="https://app.cryptomex.com.mx" class="open-account-button-top w-button">Iniciar sesión / Abrir Cuenta</a>
@@ -46,7 +47,7 @@
     <h3><strong>¿Qué es Bitcoin?</strong></h3>
     <p>Bitcoin es una moneda digital que opera con tecnología blockchain. Es tanto dinero digital como una red de pago descentralizada.</p>
     <h3><strong>¿Qué es la tecnología blockchain?<br></strong></h3>
-    <p>La cadena de bloques es un libro mayor público descentralizado que registra las transacciones criptográficas; su información permanece anónima en todo momento.</p>
+    <p>La cadena de bloques es un libro mayor público descentralizado que registra las transacciones cryptográficas; su información permanece anónima en todo momento.</p>
     <h3><strong>¿Qué es un bloque en la cadena de bloques?<br></strong></h3>
     <p>Un &quot;bloque&quot; contiene varias transacciones y solo puede contener algunas. Una vez que el bloque está lleno, se crea uno nuevo formando así la cadena de bloques.</p>
     <h3><strong>¿Qué son las finanzas descentralizadas?<br></strong></h3>
@@ -59,27 +60,27 @@
     <p>Los mineros son personas que operan computadoras sofisticadas en la red de cifrado. Ellos alimentan la cadena de bloques.</p>
     <h3><strong>¿Cómo verifico la cadena de bloques?<br></strong></h3>
     <p>Recomendamos usar <a href="http://tradeblock.com/">tradeblock.com</a> para verificar transacciones y demás en la cadena de bloques.</p>
-    <h3><strong>¿Qué es una billetera criptográfica?<br></strong></h3>
-    <p>Las carteras criptográficas pueden ser digitales o físicas. Lo digital es una aplicación y lo físico es una hoja de papel; ambos están vinculados a un código QR. Una billetera le permite almacenar, enviar y recibir criptomonedas.</p>
+    <h3><strong>¿Qué es una billetera cryptográfica?<br></strong></h3>
+    <p>Las carteras cryptográficas pueden ser digitales o físicas. Lo digital es una aplicación y lo físico es una hoja de papel; ambos están vinculados a un código QR. Una billetera le permite almacenar, enviar y recibir cryptomonedas.</p>
     <h3><strong>¿Qué es una billetera de papel?<br></strong></h3>
     <p>Una billetera de papel es como una billetera digital, excepto en papel. Una billetera de papel tiene dos códigos QR para escanear: uno para su clave pública y el otro para su clave privada.</p>
     <h3><strong>¿Qué es un código QR?<br></strong></h3>
     <p>Un código QR es una imagen escaneable que, por ejemplo, un cajero automático puede escanear para continuar con una transacción.</p>
-    <h3><strong>¿Cómo está vinculada mi billetera criptográfica?<br></strong></h3>
-    <p>Su billetera criptográfica es única para usted por una frase inicial y no por nombre, correo electrónico, etc.</p>
+    <h3><strong>¿Cómo está vinculada mi billetera cryptográfica?<br></strong></h3>
+    <p>Su billetera cryptográfica es única para usted por una frase inicial y no por nombre, correo electrónico, etc.</p>
     <h3><strong>¿Qué es una frase semilla? <br></strong></h3>
     <p>Una frase inicial es un conjunto de palabras generado aleatoriamente que permite el acceso a su billetera. Nadie puede acceder a su billetera a menos que conozca su frase inicial, incluso si tienen acceso a su teléfono, por ejemplo. </p>
     <h3><strong>¿Cómo puedo proteger mi frase semilla?<br></strong></h3>
     <p>Tenga sus palabras escritas en algún lugar, ya sea en un trozo de papel o estampadas en un trozo de metal. Recuerde, si pierde estas palabras, perderá el acceso a su billetera para siempre.</p>
     <h3><strong>¿Cómo puedo proteger mi billetera Crypto?<br></strong></h3>
-    <p>Su billetera criptográfica está respaldada por su frase inicial, pero también tiene otras medidas de seguridad como una contraseña o un PIN. Asegúrese de que su contraseña / PIN sea seguro y memorable. </p>
+    <p>Su billetera cryptográfica está respaldada por su frase inicial, pero también tiene otras medidas de seguridad como una contraseña o un PIN. Asegúrese de que su contraseña / PIN sea seguro y memorable. </p>
     <h3><strong>¿Qué es una billetera para almacenamiento en frío? <br></strong></h3>
     <p>Una billetera para almacenamiento en frío es una billetera que no está conectada a Internet.</p>
-    <h3><strong>¿Puedo comunicarme con alguien para recuperar mi billetera criptográfica?<br></strong></h3>
-    <p>Lamentablemente no. Eres tu propio banco en el mundo de las criptomonedas, por lo que toda la responsabilidad recae sobre ti.</p>
-    <h3><strong>¿Qué son los intercambios de criptomonedas?<br></strong></h3>
-    <p>Un intercambio de criptomonedas permite a los clientes intercambiar monedas por otras monedas, así como intercambiar criptomonedas por otros activos, como dinero fiduciario u otras monedas. </p>
-    <h3><strong>¿Son seguros los intercambios de criptomonedas? <br></strong></h3>
+    <h3><strong>¿Puedo comunicarme con alguien para recuperar mi billetera cryptográfica?<br></strong></h3>
+    <p>Lamentablemente no. Eres tu propio banco en el mundo de las cryptomonedas, por lo que toda la responsabilidad recae sobre ti.</p>
+    <h3><strong>¿Qué son los intercambios de cryptomonedas?<br></strong></h3>
+    <p>Un intercambio de cryptomonedas permite a los clientes intercambiar monedas por otras monedas, así como intercambiar cryptomonedas por otros activos, como dinero fiduciario u otras monedas. </p>
+    <h3><strong>¿Son seguros los intercambios de cryptomonedas? <br></strong></h3>
     <p>No completamente. Los intercambios han sido pirateados antes y los clientes han perdido el dinero que se mantenía dentro del intercambio. Cryptomex es un intercambio en el que los clientes pueden usar el intercambio sin tener sus monedas en él, sino en sus billeteras. Es casi imposible piratear una billetera.</p>
     <h3><strong>¿Qué son las claves privadas? <br></strong></h3>
     <p>Las claves privadas son para uso exclusivo del propietario. Permiten al propietario gastar o retirar las monedas que ha recibido.</p>
@@ -104,18 +105,18 @@
     <h3><strong>¿Cómo puedo acelerar mi transacción?<br></strong></h3>
     <p>Al igual que con el envío, puede pagar más tarifas por una entrega más rápida o menos tarifas por una entrega más lenta. La mayoría de las carteras tienen estas opciones.<br></p>
     <h3><strong>¿Qué son las monedas ALT?<br></strong></h3>
-    <p>Altcoins, o monedas alternativas, son simplemente cualquier criptomoneda que no sea Bitcoin, como Litecoin, Dogecoin, etc.<br></p>
+    <p>Altcoins, o monedas alternativas, son simplemente cualquier cryptomoneda que no sea Bitcoin, como Litecoin, Dogecoin, etc.<br></p>
     <h3><strong>¿Cómo verificar las transacciones en la cadena de bloques?<br></strong></h3>
     <p>Cuando se realiza una transacción, genera una ID de transacción y / o un enlace que lo enviará a un sitio en el que se encuentran los detalles de la transacción. Siempre puede verificar una transacción usando <a href="http://tradeblock.com/">tradeblock.com</a> .<br></p>
-    <h3><strong>¿Cómo puedo obtener más información sobre las criptomonedas?<br></strong></h3>
+    <h3><strong>¿Cómo puedo obtener más información sobre las cryptomonedas?<br></strong></h3>
     <p>Para un enfoque más general, coindesk.com es un gran recurso educativo. Otros incluyen Bitcoin Magazine y CoinTelegraph. También puede comunicarse con nosotros para obtener más información.<br></p>
     <h3><strong>¿Qué es Cryptomex?<br></strong></h3>
-    <p>Cryptomex es un salón de cifrado oficial que ofrece a los fanáticos de blockchain y criptomonedas la educación y los servicios necesarios para fomentar la adopción de monedas digitales.<br></p>
+    <p>Cryptomex es un salón de cifrado oficial que ofrece a los fanáticos de blockchain y cryptomonedas la educación y los servicios necesarios para fomentar la adopción de monedas digitales.<br></p>
     <h3><strong>¿Cuál es la diferencia entre Cryptomex y otros intercambios en línea?<br></strong></h3>
     <p>Todos los demás intercambios requieren que sus monedas estén en poder de ellos para que pueda comprar y vender, lo que le quita la propiedad de sus monedas. Nuestro intercambio le brinda la posibilidad de comprar y vender sin tener que guardar sus monedas, lo que le brinda la propiedad total y la máxima seguridad de sus monedas.<br></p>
-    <h3><strong>¿Hay tarjetas de débito criptográficas?<br></strong></h3>
-    <p>¡Sí! Hay tarjetas de débito criptográficas disponibles. La accesibilidad suele ser limitada debido a la ubicación geográfica. Dos tarjetas populares en los Estados Unidos son la tarjeta Bit Pay y la tarjeta Coinbase. Ambas tarjetas son confiables, pero tenga en cuenta que usar estas tarjetas significa trabajar con el sistema legal y el sistema de criptomonedas simultáneamente.<br></p>
-    <h3><strong>¿Es seguro dejar su criptomoneda en los intercambios?<br></strong></h3>
+    <h3><strong>¿Hay tarjetas de débito cryptográficas?<br></strong></h3>
+    <p>¡Sí! Hay tarjetas de débito cryptográficas disponibles. La accesibilidad suele ser limitada debido a la ubicación geográfica. Dos tarjetas populares en los Estados Unidos son la tarjeta Bit Pay y la tarjeta Coinbase. Ambas tarjetas son confiables, pero tenga en cuenta que usar estas tarjetas significa trabajar con el sistema legal y el sistema de cryptomonedas simultáneamente.<br></p>
+    <h3><strong>¿Es seguro dejar su cryptomoneda en los intercambios?<br></strong></h3>
     <p>No completamente. La mayoría de los intercambios son de custodia, lo que significa que tienen posesión de los fondos de sus clientes dentro de la billetera del intercambio. Los intercambios pueden ser objetivos de piratería debido a la cantidad de dinero que se retiene dentro del intercambio. El pirateo del monte. Gox es el ejemplo más famoso. Se recomienda utilizar servicios que le permitan la posesión total de sus fondos. <br></p>
     <h3><strong>¿Cómo se puede piratear o robar Bitcoin?<br></strong></h3>
     <p>La red de cifrado no se puede piratear fácilmente debido a la forma en que está codificada. La plataforma bitcoin en sí no es el objetivo de los piratas informáticos. Es mejor mantener siempre una cantidad baja de fondos en las billeteras de uso diario y mantener una cantidad de fondos de ahorro en la billetera de almacenamiento en frío. <br></p>
