--- a/bitcoin-otc.html
+++ b/bitcoin-otc.html
@@ -15,7 +15,7 @@
   <script type="text/javascript">WebFont.load({  google: {    families: ["Varela:400","Lato:100,100italic,300,300italic,400,400italic,700,700italic,900,900italic"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
+  <link href="images/logo-favicon.svg" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
 <body class="body">
@@ -26,9 +26,10 @@
         <a href="index.html" class="nav-bar-custom w-nav-link">Inicio</a>
         <a href="compra-bitcoin.html" class="nav-bar-custom w-nav-link">Compra Bitcoin</a>
         <a href="bitcoin-otc.html" aria-current="page" class="nav-bar-custom w-nav-link w--current">Bitcoin Atención directa</a>
+        <a href="./servicios.html" class="nav-bar-custom w-nav-link">servicios</a>
         <a href="eventos.html" class="nav-bar-custom w-nav-link">Eventos</a>
         <a href="programa-de-socios.html" class="nav-bar-custom w-nav-link">Programa De Socios</a>
-        <a href="nft-do-over.html" class="nav-bar-custom w-nav-link">NFT</a>
+         <!-- <a href="nft-do-over.html" class="nav-bar-custom w-nav-link">NFT</a> --> 
         <a href="centro-de-recursos.html" class="nav-bar-custom w-nav-link">Centro De Recursos</a>
         <a href="https://www.cryptospace.com/https://www.cryptospace.com/buy-crypto.html" class="open-account-button-top w-button">Comprar con tarjeta de crédito</a>
         <a href="https://app.cryptomex.com.mx" class="open-account-button-top w-button">Iniciar sesión / Abrir Cuenta</a>
@@ -40,7 +41,7 @@
   </div>
   <div class="section wf-section">
     <h1 class="heading-2">Atención Directa: Cryptocurrency</h1>
-    <p class="info-copy-text">Cryptomex es una fuente confiable para operaciones de venta libre con una reputación de brindar servicios incomparables de estilo boutique.<br><br>A diferencia de otros intercambios, Cryptomex es el comprador o vendedor directo de cada transacción, lo que te permite realizar transacciones a medida que se necesitan los servicios.<br><br>La atención directa se lleva a cabo a través de acuerdos privados con administradores de cuentas y comerciantes dedicados.<br><br>Cryptomex acepta transferencias internacionales, efectivo en USD y una variedad de criptomonedas.<br><br>Si estás interesado en los servicios de venta libre, envíanos un correo electrónico a <a href="mailto:info@cryptospace.com?subject=OTC%20Services" target="_blank" class="cryptomex-link">info@cryptospace.com</a>. <br></p>
+    <p class="info-copy-text">Cryptomex es una fuente confiable para operaciones de venta libre con una reputación de brindar servicios incomparables de estilo boutique.<br><br>A diferencia de otros intercambios, Cryptomex es el comprador o vendedor directo de cada transacción, lo que te permite realizar transacciones a medida que se necesitan los servicios.<br><br>La atención directa se lleva a cabo a través de acuerdos privados con administradores de cuentas y comerciantes dedicados.<br><br>Cryptomex acepta transferencias internacionales, efectivo en USD y una variedad de cryptomonedas.<br><br>Si estás interesado en los servicios de venta libre, envíanos un correo electrónico a <a href="mailto:info@cryptospace.com?subject=OTC%20Services" target="_blank" class="cryptomex-link">info@cryptospace.com</a>. <br></p>
   </div>
   <footer id="footer" class="footer wf-section">
     <div class="w-container">
