--- a/centro-de-recursos.html
+++ b/centro-de-recursos.html
@@ -15,7 +15,7 @@
   <script type="text/javascript">WebFont.load({  google: {    families: ["Varela:400","Lato:100,100italic,300,300italic,400,400italic,700,700italic,900,900italic"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
+  <link href="images/logo-favicon.svg" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
 <body class="body">
@@ -26,9 +26,10 @@
         <a href="index.html" class="nav-bar-custom w-nav-link">Inicio</a>
         <a href="compra-bitcoin.html" class="nav-bar-custom w-nav-link">Compra Bitcoin</a>
         <a href="bitcoin-otc.html" class="nav-bar-custom w-nav-link">Bitcoin Atención directa</a>
+        <a href="./servicios.html" class="nav-bar-custom w-nav-link">servicios</a>
         <a href="eventos.html" class="nav-bar-custom w-nav-link">Eventos</a>
         <a href="programa-de-socios.html" class="nav-bar-custom w-nav-link">Programa De Socios</a>
-        <a href="nft-do-over.html" class="nav-bar-custom w-nav-link">NFT</a>
+        <!-- <  <a href="nft-do-over.html" class="nav-bar-custom w-nav-link">NFT</a> --> 
         <a href="centro-de-recursos.html" aria-current="page" class="nav-bar-custom w-nav-link w--current">Centro De Recursos</a>
         <a href="https://www.cryptospace.com/buy-crypto.html" class="open-account-button-top w-button">Comprar con tarjeta de crédito</a>
         <a href="https://app.cryptomex.com.mx" class="open-account-button-top w-button">Iniciar sesión / Abrir Cuenta</a>
@@ -40,7 +41,7 @@
   </div>
   <div class="section wf-section">
     <h1 class="heading-27">¡Bienvenido al Centro de Recursos!<br></h1>
-    <p class="paragraph-16">Explora la sección a continuación para aprender más sobre seguridad de criptomonedas, ideas de inversión, conocimiento de monedas y más.<a href="https://www.cryptospace.com/priority-access/"><br></a>
+    <p class="paragraph-16">Explora la sección a continuación para aprender más sobre seguridad de cryptomonedas, ideas de inversión, conocimiento de monedas y más.<a href="https://www.cryptospace.com/priority-access/"><br></a>
     </p>
   </div>
   <div class="div-block-26">
@@ -72,7 +73,7 @@
       </div>
       <div id="w-node-_691820f9-0b47-045e-1c04-689b226352ad-9af93849" class="nft-resource-cards">
         <div><img src="images/pexels-tima-miroshnichenko-7567606-1024x683.jpeg" loading="lazy" width="429" sizes="(max-width: 767px) 87vw, 428.994140625px" srcset="images/pexels-tima-miroshnichenko-7567606-1024x683.jpeg 800w, images/pexels-tima-miroshnichenko-7567606-1024x683.jpeg 1024w" alt="" class="image-37"></div>
-        <h4 class="heading-29">¿Son seguros los intercambios de criptomonedas?</h4>
+        <h4 class="heading-29">¿Son seguros los intercambios de cryptomonedas?</h4>
         <a href="articles/son-seguros-los-intercambios-de-criptomonedas.html" class="ntf-resource-button w-button">LEER MÁS</a>
       </div>
     </div>
