--- a/eventos.html
+++ b/eventos.html
@@ -15,7 +15,7 @@
   <script type="text/javascript">WebFont.load({  google: {    families: ["Varela:400","Lato:100,100italic,300,300italic,400,400italic,700,700italic,900,900italic"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
+  <link href="images/logo-favicon.svg" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
 <body class="body">
@@ -26,9 +26,10 @@
         <a href="index.html" class="nav-bar-custom w-nav-link">Inicio</a>
         <a href="compra-bitcoin.html" class="nav-bar-custom w-nav-link">Compra Bitcoin</a>
         <a href="bitcoin-otc.html" class="nav-bar-custom w-nav-link">Bitcoin Atención directa</a>
+        <a href="servicios.html" class="nav-bar-custom w-nav-link">servicios</a>
         <a href="eventos.html" aria-current="page" class="nav-bar-custom w-nav-link w--current">Eventos</a>
         <a href="programa-de-socios.html" class="nav-bar-custom w-nav-link">Programa De Socios</a>
-        <a href="nft-do-over.html" class="nav-bar-custom w-nav-link">NFT</a>
+        <!-- <a href="nft-do-over.html" class="nav-bar-custom w-nav-link">NFT</a> --> 
         <a href="centro-de-recursos.html" class="nav-bar-custom w-nav-link">Centro De Recursos</a>
         <a href="https://www.cryptospace.com/buy-crypto.html" class="open-account-button-top w-button">Comprar con tarjeta de crédito</a>
         <a href="https://app.cryptomex.com.mx" class="open-account-button-top w-button">Iniciar sesión / Abrir Cuenta</a>
@@ -37,7 +38,7 @@
         <div class="icon w-icon-nav-menu"></div>
       </div>
     </div>
-  </div>
+  </div>  
   <div class="section wf-section">
     <h1 class="heading-2">Eventos<br></h1>
     <p class="paragraph-15">El <em>lounge </em>de Cryptomex estará en el Metaverso — y estás en la lista VIP.<br></p>
@@ -58,6 +59,17 @@
       <p id="w-node-_597cd5d2-cb0a-20c0-ab44-485fa46988c3-acf93837" class="grid-copy-info"><em>Work hard, play hard</em>. Nuestro <em>meta-lounge</em> organiza fiestas del nivel de «El Lobo de Wall Street» en <em>The Sandbox</em>.<br></p>
       <p id="w-node-_5aa60768-e8d8-067d-dc12-238a2aa4aa24-acf93837" class="grid-copy-info">Conecta con inversionistas, empresarios, ejecutivos de negocios, gobernadores y líderes comunitarios y funcionarios estatales muy establecidos.<a href="https://www.cryptomex.com.mx/acceso/" target="_blank"><br></a>
       </p>
+    </div>
+    <p class="paragraph-17"><strong class="bold-text-19"> Nuestros Eventos</strong><br></p>
+      <br>
+    <div class="container__images--event">
+      
+      <img src="./images/Evento1.jpeg" alt="" class="image--event">
+      <img src="./images/Evento2.jpeg" alt="" class="image--event">
+      <img src="./images/Evento3.jpeg" alt="" class="image--event">
+      <img src="./images/Evento4.jpeg.jpg" alt="" class="image--event">
+      <img src="./images/Evento5.jpeg.jpg" alt="" class="image--event">
+
     </div>
     <div class="div-block-11">
       <a href="acceso.html" class="button-info-copy w-button">Regístrate</a>
