--- a/nft-do-over.html
+++ b/nft-do-over.html
@@ -15,7 +15,7 @@
   <script type="text/javascript">WebFont.load({  google: {    families: ["Varela:400","Lato:100,100italic,300,300italic,400,400italic,700,700italic,900,900italic"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
+  <link href="images/logo-favicon.svg" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
 <body>
@@ -27,6 +27,7 @@
         <a href="compra-bitcoin.html" class="nav-bar-custom w-nav-link">Compra Bitcoin</a>
         <a href="sucursales.html" class="nav-bar-custom w-nav-link">Sucursales</a>
         <a href="bitcoin-otc.html" class="nav-bar-custom w-nav-link">Bitcoin Atención directa</a>
+        <a href="servicios.html" class="nav-bar-custom w-nav-link">servicios</a>
         <a href="eventos.html" class="nav-bar-custom w-nav-link">Eventos</a>
         <a href="programa-de-socios.html" class="nav-bar-custom w-nav-link">Programa De Socios</a>
         <a href="nft-do-over.html" aria-current="page" class="nav-bar-custom w-nav-link w--current">NFT</a>
@@ -132,7 +133,7 @@
         </div>
       </div>
       <div class="w-col w-col-6">
-        <p class="paragraph-42">Después de meses de consideración e investigación dentro del mercado de NFTs, hemos invertido $175k de nuestro capital en HappyLand Gummy Bears - una notable serie de nuevos NFTs. Solo fueron creados 9600 de estos ositos, y con una tecnología bastante impresionante.<br><br>Los HappyLand Gummy Bears fueron creados para darle un sentimiento de comunidad a todos sus hodlers. Cuando compras un Gummy Bear, también estás entrando en una de las 20 guaridas de comunidades cerradas en donde todos sus miembros interactúan y se apoyan entre sí.<br><br>Para las finanzas tradicionales o los inversores de criptomonedas, esto puede parecer una caminata por el lado salvaje. Como pasó con el Bitcoin en el 2009. Siempre estamos buscando la oportunidad de apoyar a nuestro clientes con opciones para diversificar entre las más importantes clases de activos digitales. BTC, ETH, key altcoins, y ahora con las NFTs.</p>
+        <p class="paragraph-42">Después de meses de consideración e investigación dentro del mercado de NFTs, hemos invertido $175k de nuestro capital en HappyLand Gummy Bears - una notable serie de nuevos NFTs. Solo fueron creados 9600 de estos ositos, y con una tecnología bastante impresionante.<br><br>Los HappyLand Gummy Bears fueron creados para darle un sentimiento de comunidad a todos sus hodlers. Cuando compras un Gummy Bear, también estás entrando en una de las 20 guaridas de comunidades cerradas en donde todos sus miembros interactúan y se apoyan entre sí.<br><br>Para las finanzas tradicionales o los inversores de cryptomonedas, esto puede parecer una caminata por el lado salvaje. Como pasó con el Bitcoin en el 2009. Siempre estamos buscando la oportunidad de apoyar a nuestro clientes con opciones para diversificar entre las más importantes clases de activos digitales. BTC, ETH, key altcoins, y ahora con las NFTs.</p>
       </div>
     </div>
   </div>
