--- a/programa-de-socios.html
+++ b/programa-de-socios.html
@@ -15,7 +15,7 @@
   <script type="text/javascript">WebFont.load({  google: {    families: ["Varela:400","Lato:100,100italic,300,300italic,400,400italic,700,700italic,900,900italic"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
+  <link href="images/logo-favicon.svg" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
 <body class="body">
@@ -27,9 +27,10 @@
         <a href="compra-bitcoin.html" class="nav-bar-custom w-nav-link">Compra Bitcoin</a>
         <a href="sucursales.html" class="nav-bar-custom w-nav-link">Sucursales</a>
         <a href="bitcoin-otc.html" class="nav-bar-custom w-nav-link">Bitcoin Atención directa</a>
+        <a href="servicios.html" class="nav-bar-custom w-nav-link">servicios</a>
         <a href="eventos.html" class="nav-bar-custom w-nav-link">Eventos</a>
         <a href="programa-de-socios.html" aria-current="page" class="nav-bar-custom w-nav-link w--current">Programa De Socios</a>
-        <a href="nft-do-over.html" class="nav-bar-custom w-nav-link">NFT</a>
+        <!-- <  <a href="nft-do-over.html" class="nav-bar-custom w-nav-link">NFT</a> --> 
         <a href="centro-de-recursos.html" class="nav-bar-custom w-nav-link">Centro De Recursos</a>
         <a href="https://www.cryptospace.com/buy-crypto.html" class="open-account-button-top w-button">Comprar con tarjeta de crédito</a>
         <a href="https://app.cryptomex.com.mx" class="open-account-button-top w-button">Iniciar sesión / Abrir Cuenta</a>
@@ -42,23 +43,23 @@
   <div class="section-18 wf-section"><img src="images/header-yellow-filter.jpg" loading="lazy" width="2843" sizes="100vw" srcset="images/header-red-filter-p-500.png 500w, images/header-red-filter-p-800.png 800w, images/header-red-filter-p-1080.png 1080w, images/header-yellow-filter.jpg 1500w" alt="" class="image-36"></div>
   <div class="_2-section wf-section">
     <h1 class="heading-2">Programa de Socios de Cryptomex<br></h1>
-    <p class="paragraph-36">El Programa de socios de Cryptomex permite que personas e instituciones de todo tipo participen en la mega-tendencia actual de adopción de criptomonedas.<br><br>Aquí hay algunos ejemplos de los tipos de asociación que podemos ofrecer. Ponte en contacto con nuestro equipo para explorar estas y otras opciones.<a href="https://www.cryptospace.com/priority-access/"><br></a>
+    <p class="paragraph-36">El Programa de socios de Cryptomex permite que personas e instituciones de todo tipo participen en la mega-tendencia actual de adopción de cryptomonedas.<br><br>Aquí hay algunos ejemplos de los tipos de asociación que podemos ofrecer. Ponte en contacto con nuestro equipo para explorar estas y otras opciones.<a href="https://www.cryptospace.com/priority-access/"><br></a>
     </p>
     <div class="w-layout-grid grid-7">
       <div id="w-node-_1c74431b-89f9-5de0-750c-435d02bd7a9d-85f93848" class="partners-grid w-container">
         <div class="div-block-16"><img src="images/1.4.png" loading="lazy" alt="" class="image-42"></div>
         <h1 class="heading-16"><strong class="bold-text-6">Comerciante de lingotes</strong></h1>
-        <p class="paragraph-21">Brinde a sus clientes una opción fácil para comprar criptomonedas.<br><br>Podemos extender líneas de crédito a su concesionario de lingotes para que los pedidos de criptomonedas de los clientes se llenen al instante y con precios fijos. Liquida cuentas mediante transferencia bancaria.<br><br>Agregua ingresos adicionales significativos incorporando cripto a su oferta de metales. </p>
+        <p class="paragraph-21">Brinde a sus clientes una opción fácil para comprar cryptomonedas.<br><br>Podemos extender líneas de crédito a su concesionario de lingotes para que los pedidos de cryptomonedas de los clientes se llenen al instante y con precios fijos. Liquida cuentas mediante transferencia bancaria.<br><br>Agregua ingresos adicionales significativos incorporando crypto a su oferta de metales. </p>
       </div>
       <div id="w-node-_49dde9cf-2798-ad1c-9a04-daec5e85b9c3-85f93848" class="partners-grid w-container">
         <div class="div-block-16"><img src="images/1.5.png" loading="lazy" alt=""></div>
-        <h1 class="heading-16"><strong class="bold-text-6">Intercambios de cripto a cripto</strong></h1>
-        <p class="paragraph-21">Cryptomex no es una plataforma de transacciones diarias. Somos una rampa de entrada y salida con monedas seleccionadas y transacciones en cadena. <br><br>Nuestro programa de socios puede permitir que tu intercambio de comercio de cripto a cripto proporcione opciones de rampa de entrada y salida a sus clientes a través de soluciones de <em>white label</em>.</p>
+        <h1 class="heading-16"><strong class="bold-text-6">Intercambios de crypto a crypto</strong></h1>
+        <p class="paragraph-21">Cryptomex no es una plataforma de transacciones diarias. Somos una rampa de entrada y salida con monedas seleccionadas y transacciones en cadena. <br><br>Nuestro programa de socios puede permitir que tu intercambio de comercio de crypto a crypto proporcione opciones de rampa de entrada y salida a sus clientes a través de soluciones de <em>white label</em>.</p>
       </div>
       <div id="w-node-b612d724-7260-a264-4559-15234dd0be89-85f93848" class="partners-grid w-container">
         <div class="div-block-16"><img src="images/1.3.png" loading="lazy" alt=""></div>
         <h1 class="heading-16"><strong class="bold-text-6">Soluciones de fideicomiso</strong></h1>
-        <p class="paragraph-21">Si tienes clientes que desean gastar grandes cantidades de fondos criptográficos (propiedad, artículos de lujo, etc.), podemos ayudar a verificar si los fondos están limpios mediante el análisis de seguimiento de blockchain para que puedas aceptar el negocio sin riesgo. <br></p>
+        <p class="paragraph-21">Si tienes clientes que desean gastar grandes cantidades de fondos cryptográficos (propiedad, artículos de lujo, etc.), podemos ayudar a verificar si los fondos están limpios mediante el análisis de seguimiento de blockchain para que puedas aceptar el negocio sin riesgo. <br></p>
       </div>
       <div id="w-node-_0e6a964c-b672-f743-a4b5-65abe13c9338-85f93848" class="partners-grid w-container">
         <div class="div-block-16"><img src="images/1.6.png" loading="lazy" alt=""></div>
@@ -68,12 +69,12 @@
       <div id="w-node-ed20b5ff-825d-dd50-c7c9-98ab3829f61f-85f93848" class="partners-grid w-container">
         <div class="div-block-16"><img src="images/1.7.png" loading="lazy" alt=""></div>
         <h1 class="heading-16"><strong class="bold-text-6">Fondo de liquidez<br></strong></h1>
-        <p class="paragraph-21">Si posees cantidades significativas de criptomonedas populares, es posible que podamos aceptar una parte de sus tenencias en nuestro programa de fondo de liquidez, lo que te generará una alta participación en los ingresos, según el volumen de transacciones que se mueve a través de la mesa de operaciones de Cryptomex. <br></p>
+        <p class="paragraph-21">Si posees cantidades significativas de cryptomonedas populares, es posible que podamos aceptar una parte de sus tenencias en nuestro programa de fondo de liquidez, lo que te generará una alta participación en los ingresos, según el volumen de transacciones que se mueve a través de la mesa de operaciones de Cryptomex. <br></p>
       </div>
       <div class="partners-grid w-container">
         <div class="div-block-16"><img src="images/1.8.png" loading="lazy" alt=""></div>
         <h1 class="heading-16"><strong class="bold-text-6">Gerentes financieros<br></strong></h1>
-        <p class="paragraph-21">Si opera servicios de gestión financiera (asesoría, gestión de family office, fondos privados, capital de riesgo, inversión ángel, crowdfunding, etc). podemos ayudar a respaldar el lado de la gestión de cifrado de su negocio con evaluaciones de riesgo del cliente, educación sobre criptografía, servicios de depósito en garantía, Bitcoin Atención directa y más.  <br></p>
+        <p class="paragraph-21">Si opera servicios de gestión financiera (asesoría, gestión de family office, fondos privados, capital de riesgo, inversión ángel, crowdfunding, etc). podemos ayudar a respaldar el lado de la gestión de cifrado de su negocio con evaluaciones de riesgo del cliente, educación sobre cryptografía, servicios de depósito en garantía, Bitcoin Atención directa y más.  <br></p>
       </div>
     </div>
   </div>
