--- a/sobre.html
+++ b/sobre.html
@@ -15,7 +15,7 @@
   <script type="text/javascript">WebFont.load({  google: {    families: ["Varela:400","Lato:100,100italic,300,300italic,400,400italic,700,700italic,900,900italic"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
+  <link href="images/logo-favicon.svg" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
 <body>
@@ -28,7 +28,7 @@
         <a href="bitcoin-otc.html" class="nav-bar-custom w-nav-link">Bitcoin Atención directa</a>
         <a href="eventos.html" class="nav-bar-custom w-nav-link">Eventos</a>
         <a href="programa-de-socios.html" class="nav-bar-custom w-nav-link">Programa De Socios</a>
-        <a href="nft-do-over.html" class="nav-bar-custom w-nav-link">NFT</a>
+        < <!-- < <!-- <a href="nft-do-over.html" class="nav-bar-custom w-nav-link">NFT</a> --> -->
         <a href="centro-de-recursos.html" class="nav-bar-custom w-nav-link">Centro De Recursos</a>
         <a href="https://www.cryptospace.com/buy-crypto.html" class="open-account-button-top w-button">Comprar con tarjeta de crédito</a>
         <a href="https://app.cryptomex.com.mx" class="open-account-button-top w-button">Iniciar sesión / Abrir Cuenta</a>
@@ -41,13 +41,13 @@
   <section id="cards-section" class="cards-section wf-section">
     <div class="centered-container w-container">
       <h2 class="heading-41">Sobre Cryptomex<br></h2>
-      <p class="paragraph-33">Cryptospace comenzó en San Pedro, California como Bitcoin Atención directa Desk y Crypto Community Lounge.<br><br>Hoy en día, mantenemos una docena de cajeros automáticos de Bitcoin en California y Nevada, proporcionamos un intercambio de cifrado en línea completamente funcional y tenemos asociaciones que se extienden a México y más allá.<br><br>Nuestro compromiso es proporcionar transacciones criptográficas seguras en las que cada cliente mantenga la custodia total de su criptomoneda en todo momento.</p>
+      <p class="paragraph-33">Cryptospace comenzó en San Pedro, California como Bitcoin Atención directa Desk y Crypto Community Lounge.<br><br>Hoy en día, mantenemos una docena de cajeros automáticos de Bitcoin en California y Nevada, proporcionamos un intercambio de cifrado en línea completamente funcional y tenemos asociaciones que se extienden a México y más allá.<br><br>Nuestro compromiso es proporcionar transacciones cryptográficas seguras en las que cada cliente mantenga la custodia total de su cryptomoneda en todo momento.</p>
       <div class="div-block-62"><img src="images/Screen-Shot-2021-02-16-at-13.51.11.png" loading="lazy" sizes="(max-width: 479px) 73vw, (max-width: 991px) 76vw, 751.9921875px" srcset="images/Screen-Shot-2021-02-16-at-13.51.11-p-500.png 500w, images/Screen-Shot-2021-02-16-at-13.51.11-p-800.png 800w, images/Screen-Shot-2021-02-16-at-13.51.11-p-1080.png 1080w, images/Screen-Shot-2021-02-16-at-13.51.11.png 1184w" alt="" class="image-26"></div>
       <div class="cards-grid-container">
         <div id="w-node-_8127650e-2e3c-9689-6d44-61cdf8b8d244-5cf93829">
           <div class="div-block-about-company-list">
             <h4>1. Sin custodia<br></h4>
-            <div class="text-block-10">No mantenemos los fondos criptográficos de los clientes en nuestras propias billeteras, a diferencia de la mayoría de los intercambios actuales. En cambio, aconsejamos a nuestros clientes &#x27;no son sus claves, no son sus criptomonedas&#x27;.<br></div>
+            <div class="text-block-10">No mantenemos los fondos cryptográficos de los clientes en nuestras propias billeteras, a diferencia de la mayoría de los intercambios actuales. En cambio, aconsejamos a nuestros clientes &#x27;no son sus claves, no son sus cryptomonedas&#x27;.<br></div>
           </div>
         </div>
         <div id="w-node-_8127650e-2e3c-9689-6d44-61cdf8b8d24b-5cf93829">
