--- a/index.html
+++ b/index.html
@@ -54,15 +54,15 @@
       <div class="hero__container">
         <div class="hero__container--left">
           <div class="hero__container--left-title">
-            <img src="../cryptomex/images/logo-cryptomex-full.png" alt="cryptomex" />
+            <img src="./images/logo-cryptomex-full.png" alt="cryptomex" />
           </div>
           <div class="hero__container--left-buttons">
             <a href="#" class="hero__container--left-button-one"
-              ><img src="../cryptomex/images/icon-button-one.png" alt="button" />INICIAR
+              ><img src="./images/icon-button-one.png" alt="button" />INICIAR
               SESIÓN / ABRIR CUENTA
             </a>
             <a href="#" class="hero__container--left-button-two"
-              ><img src="../cryptomex/images/icon-button-two.png" alt="button" />COMPRAR
+              ><img src="./images/icon-button-two.png" alt="button" />COMPRAR
               CON TARJETA DE CRÉDITO
             </a>
           </div>
