--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="hero__container--right">
           <img
             class="hero__container--right-img"
-            src="../cryptomex/images/hero-image.png"
+            src="./images/hero-image.png"
             alt="hero"
           />
         </div>
@@ -85,7 +85,7 @@
         <div class="crypto__container--left">
           <img
             class="crypto__container--left-img"
-            src="../cryptomex/images/crypto-hand.png"
+            src="./images/crypto-hand.png"
             alt="crypto"
           />
         </div>
@@ -98,7 +98,7 @@
           </div>
           <div class="crypto__container--right-title">
             <h2>NOT YOUR KEYS NOT YOUR CRYPTO</h2>
-            <img src="../cryptomex/images/lock-icon.png" alt="lock" />
+            <img src="./images/lock-icon.png" alt="lock" />
           </div>
         </div>
       </div>
@@ -110,14 +110,14 @@
           <h2>¿Qué nos hace distintos?</h2>
         </div>
         <div class="products__container--images">
-          <img src="../cryptomex/images/Products-cryptomex-1.png" alt="products" />
-          <img src="../cryptomex/images/Products-cryptomex-2.png" alt="products" />
-          <img src="../cryptomex/images/Products-cryptomex-3.png" alt="products" />
-          <img src="../cryptomex/images/Products-cryptomex-4.png" alt="products" />
-          <img src="../cryptomex/images/Products-cryptomex-5.png" alt="products" />
-          <img src="../cryptomex/images/Products-cryptomex-6.png" alt="products" />
-          <img src="../cryptomex/images/Products-cryptomex-7.png" alt="products" />
-          <img src="../cryptomex/images/Products-cryptomex-8.png" alt="products" />
+          <img src="./images/Products-cryptomex-1.png" alt="products" />
+          <img src="./images/Products-cryptomex-2.png" alt="products" />
+          <img src="./images/Products-cryptomex-3.png" alt="products" />
+          <img src="./images/Products-cryptomex-4.png" alt="products" />
+          <img src="./images/Products-cryptomex-5.png" alt="products" />
+          <img src="./images/Products-cryptomex-6.png" alt="products" />
+          <img src="./images/Products-cryptomex-7.png" alt="products" />
+          <img src="./images/Products-cryptomex-8.png" alt="products" />
         </div>
         <div class="products__container--subtitle">
           <h2>Gente Real, Dinero Real</h2>
@@ -130,7 +130,7 @@
         <div class="ubication__container--left">
           <img
             class="ubication__container--left-img"
-            src="../cryptomex/images/ubication_section-image.png"
+            src="./images/ubication_section-image.png"
             alt="ubication"
           />
           <div class="ubication__container--left-text-container">
@@ -148,7 +148,7 @@
           <div class="ubication__container--right-title">
             <img
               class="ubication__container--right-icons"
-              src="../cryptomex/images/ubication-icon-1.png"
+              src="./images/ubication-icon-1.png"
               alt="ubication"
             />
             <h2>Estamos en 8 ciudades del páis</h2>
@@ -156,7 +156,7 @@
           <div class="ubication__container--right-subtitle">
             <img
               class="ubication__container--right-icons"
-              src="../cryptomex/images/ubication-icon-2.webp"
+              src="./images/ubication-icon-2.webp"
               alt="ubication"
             />
             <h3>Servicio Personalizado</h3>
@@ -164,7 +164,7 @@
           <div class="ubication__container--right-subtitle">
             <img
               class="ubication__container--right-icons"
-              src="../cryptomex/images/ubication-icon-3.webp"
+              src="./images/ubication-icon-3.webp"
               alt="ubication"
             />
             <h3>Clases Educativas</h3>
@@ -172,7 +172,7 @@
           <div class="ubication__container--right-subtitle">
             <img
               class="ubication__container--right-icons"
-              src="../cryptomex/images/ubication-icon-4.webp"
+              src="./images/ubication-icon-4.webp"
               alt="ubication"
             />
             <h3>Soporte 24/7</h3>
@@ -200,7 +200,7 @@
         <div class="clients__container--right">
           <img
             class="clients__container--right-img"
-            src="../cryptomex/images/clients_section-image.png"
+            src="./images/clients_section-image.png"
             alt="clients"
           />
         </div>
@@ -227,7 +227,7 @@
         <div class="members__container--right">
           <img
             class="members__container--right-img"
-            src="../cryptomex/images/members_section-image.png"
+            src="./images/members_section-image.png"
             alt="clients"
           />
         </div>
@@ -244,7 +244,7 @@
             cliente.
           </p>
           <div class="footer__content-logo">
-            <img src="../cryptomex/images/logo_solo_cryptomex.png" alt="logo" />
+            <img src="./images/logo_solo_cryptomex.png" alt="logo" />
           </div>
         </div>
         <div class="footer__content-menu">
