--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
             </p>
             <p class="members__container--left-text-two">
               Convirtiéndose en la manera más revolucionaria de conectarse con
-              las personas y permitir que Bitcoin los una nstantáneamente.
+              las personas y permitir que Bitcoin los una instantáneamente.
             </p>
           </div>
         </div>
