add container map

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
               Permítele a tu negocio abarcar un nuevo mercado.
             </p>
             <p class="clients__container--left-text-two">
-              es la solución, acepta Bitcoin cómo pago y obtén tus ganancias
+              Es la solución, acepta Bitcoin cómo pago y obtén tus ganancias
               instantáneamente, seguro, rápido y fácil de usar.
             </p>
           </div>
