--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="hero__container--right">
           <img
             class="hero__container--right-img"
-            src="./images/hero-image.png"
+            src="./images/Desktop-mobile-atm-crypto-home--version-3.png"
             alt="hero"
           />
         </div>
@@ -192,15 +192,15 @@
               Permítele a tu negocio abarcar un nuevo mercado.
             </p>
             <p class="clients__container--left-text-two">
-              Es la solución, acepta Bitcoin cómo pago y obtén tus ganancias
+              Obtén la solución, acepta Bitcoin cómo pago y obtén tus ganancias
               instantáneamente, seguro, rápido y fácil de usar.
             </p>
-          </div>
+          </div>  
         </div>
         <div class="clients__container--right">
           <img
             class="clients__container--right-img"
-            src="./images/clients_section-image.png"
+            src="./images/clients_section-image-v2.png"
             alt="clients"
           />
         </div>
@@ -239,9 +239,7 @@
         <div class="footer__content-about">
           <h2>Sobre Nosotros</h2>
           <p>
-            Somos una empresa dedicada a la venta de productos de calidad, con
-            una amplia gama de productos para todos los gustos y necesidades del
-            cliente.
+           Somos un Exchange sin custodia dedicada al intercambio de cryptomonedas, nuestro compromiso es brindar prioridad a nuestros usuarios haciendo que nuestros servicios sean mas fáciles, seguros, rápidos y convenientes.
           </p>
           <div class="footer__content-logo">
             <img src="./images/logo_solo_cryptomex.png" alt="logo" />
@@ -311,4 +309,4 @@
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 </body>
-</html>
+</html> 
