modify some images and add consultant pages

--- a/nft-do-over.html
+++ b/nft-do-over.html
@@ -23,15 +23,16 @@
     <div class="container-9 w-container">
       <a href="index.html" class="brand-2 w-nav-brand"><img src="images/logo_solo_cryptomex.png" loading="lazy" width="202" sizes="(max-width: 479px) 100vw, 201.9921875px" srcset="images/logo_solo_cryptomex.png 500w, images/logo_solo_cryptomex.png 800w, images/logo_solo_cryptomex.png 2877w" alt=""></a>
       <nav role="navigation" class="nav-menu-3 w-nav-menu">
-        <a href="index.html" class="nav-bar-custom w-nav-link">Inicio</a>
-        <a href="compra-bitcoin.html" class="nav-bar-custom w-nav-link">Compra Bitcoin</a>
+        <a href="index.html" aria-current="page" class="nav-bar-custom w-nav-link w--current">Inicio</a>
+        <!-- <a href="compra-bitcoin.html" class="nav-bar-custom w-nav-link">Compra Bitcoin</a> -->
         <a href="sucursales.html" class="nav-bar-custom w-nav-link">Sucursales</a>
-        <a href="bitcoin-otc.html" class="nav-bar-custom w-nav-link">Bitcoin Atención directa</a>
-        <a href="servicios.html" class="nav-bar-custom w-nav-link">servicios</a>
+        <!-- <a href="bitcoin-otc.html" class="nav-bar-custom w-nav-link">Bitcoin Atención directa</a> -->
+        <a href="servicios.html" class="nav-bar-custom w-nav-link">Servicios</a>
         <a href="eventos.html" class="nav-bar-custom w-nav-link">Eventos</a>
-        <a href="programa-de-socios.html" class="nav-bar-custom w-nav-link">Programa De Socios</a>
-        <a href="nft-do-over.html" aria-current="page" class="nav-bar-custom w-nav-link w--current">NFT</a>
-        <a href="centro-de-recursos.html" class="nav-bar-custom w-nav-link">Centro De Recursos</a>
+        <a href="asesores.html" class="nav-bar-custom w-nav-link">Asesores</a>
+        <!-- <a href="programa-de-socios.html" class="nav-bar-custom w-nav-link">Programa De Socios</a>
+         <a href="nft-do-over.html" class="nav-bar-custom w-nav-link">NFT</a>  
+        <a href="centro-de-recursos.html" class="nav-bar-custom w-nav-link">Centro De Recursos</a> -->
         <a href="https://www.cryptospace.com/buy-crypto.html" class="open-account-button-top w-button">Comprar con tarjeta de crédito</a>
         <a href="https://app.cryptomex.com.mx" class="open-account-button-top w-button">Iniciar sesión / Abrir Cuenta</a>
       </nav>
