--- a/index.html
+++ b/index.html
@@ -193,8 +193,8 @@
               Permítele a tu negocio abarcar un nuevo mercado.
             </p>
             <p class="clients__container--left-text-two">
-              Obtén la solución, acepta Bitcoin cómo pago y obtén tus ganancias
-              instantáneamente, seguro, rápido y fácil de usar.
+              Obtén la solución, acepta Bitcoin cómo pago y aumenta tus ganancias
+              instantáneamente, seguro, rápido y fácil de usar.   
             </p>
             <p class="clients__container--left-text-two"> <a class ="privacy_policy" href="politica-datos.html">
               Lee la politica de privacidad
