--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <img src="./images/Products-cryptomex-3.png" alt="products" />
           <img src="./images/Products-cryptomex-4.png" alt="products" />
           <img src="./images/Products-cryptomex-5.png" alt="products" />
-          <img src="./images/Products-cryptomex-6.png" alt="products" />
+          <img src="./images/plataforma-amigable.png" alt="products" />
           <img src="./images/Products-cryptomex-7.png" alt="products" />
           <img src="./images/Products-cryptomex-8.png" alt="products" />
         </div>
@@ -197,7 +197,7 @@
               instantáneamente, seguro, rápido y fácil de usar.   
             </p>
             <p class="clients__container--left-text-two"> <a class ="privacy_policy" href="politica-datos.html">
-              Lee la politica de privacidad
+              Lee la política de privacidad
             </a>
               
             </p>
@@ -226,7 +226,7 @@
             </p>
             <p class="members__container--left-text-two">
               Convirtiéndose en la manera más revolucionaria de conectarse con
-              las personas y permitir que Bitcoin los una instantáneamente.
+              las personas y permitir que Bitcoin los una instantáneamente. 
             </p>
           </div>
         </div>
